fixed spacing issues

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -17,6 +17,7 @@ nav{
 	position: fixed;
 	display:block;
 	width: 100%;
+	height: 50px;
 }
 
 .container{
